lab-05-ingress-tls/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
