lab-05-ingress-tls/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-service

spec:
  selector:
    app: api

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
